--- a/week01/index.html
+++ b/week01/index.html
@@ -3,12 +3,12 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html lang="en-us">
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>WDD 230 - Portal - [Ednilson Bambo]</title>
-        <meta name="description" content="">
+        <meta name="description" content="My homepage for the WDD230 course. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson">
         <link rel="stylesheet" href="">
