--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -8,7 +8,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
-        <meta name="description" content="">
+        <meta name="description" content="My name is Ednilson Bambo. This is a page for my WDD230 Assignment. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson">
         <link rel="stylesheet" href="">
