--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 
         <section id="project" class="card">
             <h3>Project</h3>
-            <p><a href="">Chamber project</a></p>
+            <p><a href="week01/chamber-site-plan.html">Chamber Project</a></p>
+            <p><a href="week01/chamber-site-plan.html">Chamber Project Site Plan</a></p>
         </section>
         <section id="information" class="card">
             <h3>information</h3>
