--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <header>
-            <img src="images/profile-pic.png" alt="profile-pic" id="my-pic" >
+            <img src="images/profile-pic.jpg" alt="profile-pic" id="my-pic" >
             <h1 id="my-name">Ednilson Bambo</h1>
         </header>
         <h2 id="main-h2">WDD 230: Course Activity Portal</h2>
