--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link rel="preconnect" href="https://fonts.gstatic.com"
         crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" 
         rel="stylesheet">
+
+        <link rel="icon" href="favicon.ico">
     </head>
     <body>
         <nav>
