--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <meta name="description" content="My name is Ednilson Bambo. This is a page for my WDD230 Assignment. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson">
+
+        <meta property="og:title" content="WDD 230 - Portal - Ednilson Bambo">
+        <meta property="og:type" content="website">
+        <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dailysabah.com%2Flife%2Ftravel%2Fmagical-secluded-paradise-of-portugals-setubal-peninsula&psig=AOvVaw0sTA1I7m3-EEL3Ro13rCUf&ust=1673632725277000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMCmpPLNwvwCFQAAAAAdAAAAABAE">
+        <meta property="og:url" content="https://yobamba.github.io/wdd230/">
+
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/larger.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
