added the link to this week's codepen on responsiveness

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <ul>
                 <li>
                     <p>Week 01 <a href="holygrail.html">Holy Grail</a></p>
-                    <p>Week 02 <a href=""></a></p>
+                    <p>Week 02 <a href="https://codepen.io/Ednilson-Bambo/pen/dyjRypg" target="_blank">Responsive</a></p>
                     <p>Week 03 <a href=""></a></p>
                     <p>Week 04 <a href=""></a></p>
                     <p>Week 05 <a href=""></a></p>
