Updated several files

--- a/week02/dom.html
+++ b/week02/dom.html
@@ -4,15 +4,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple DOM example</title>
-    <style>
-        .highlight {
-          color: white;
-          background-color: black;
-          padding: 10px;
-          width: 250px;
-          text-align: center;
-        }
-      </style>
   </head>
   <body>
       <section>
@@ -31,7 +22,7 @@
         const text = document.createTextNode(" - the premier source for web development knowledge. ");
         const linkPara = document.querySelector('p');
         linkPara.appendChild(text);
-        para.setAttribute('class', 'highlight');
+        para.style.color = "purple";
       </script>
   </body>
 </html>
