corrected the link to the chamber page

--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 
         <section id="project" class="card">
             <h3>Project</h3>
-            <p><a href="week01/chamber-site-plan.html">Chamber Project</a></p>
+            <p><a href="chamber/index.html">Chamber Project</a></p>
             <p><a href="week01/chamber-site-plan.html">Chamber Project Site Plan</a></p>
         </section>
         <section id="information" class="card">
