--- a/week02/bom.html
+++ b/week02/bom.html
@@ -18,7 +18,7 @@
 
 
         <link rel="stylesheet" href="styles/bom.css">
-        <script src="scripts/bom.js"></script>
+        
     </head> 
 
 
@@ -26,8 +26,8 @@
 
         <h1>📖 Book of Mormon - Top 10</h1>
         <main>
-        <label for="favchap">Enter Book and Chapter: </label>
-        <input type="text" id="favchap" value="Alma 5">
+        <label for="item">Enter Book and Chapter: </label>
+        <input type="text" id="favchap" value="Enter a chapter">
         <button type="submit" id="button">Add Chapter</button>
         <ul id="list"></ul>
         </main>
@@ -35,6 +35,6 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="" async defer></script>
+        <script src="scripts/bom.js"></script>
     </body>
 </html>
