fixed the contrast issues

--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
     <body>
         <nav>
             <img class="menu-button" src="images/hamburger-menu-icon.svg" alt="burger-menu-icon">
-            <div id="mode">
-                ☑️
-            </div>
+          
+                <p style="color: white;" id="mode">Dark Mode</p>
+       
             <a href="https://www.linkedin.com/in/ednilsonbambo/" target="_blank">LinkedIn</a>
             <a href="">BYU-Idaho</a>
         </nav>
@@ -432,8 +432,8 @@
         </section>
         <section id="information" class="card">
             <h3>information</h3>
-            <p>Today's Weather</p>
-            <p>Visitor Count</p>
+            <p style="color:black">Today's Weather</p>
+            <p style="color:black">Visitor Count</p>
         </section>
         </main>
         <footer>
