fixed the menu button

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     </head>
     <body>
         <nav>
-            <img class="menu-button" src="images/hamburger-menu-icon.svg" alt="burger-menu-icon">
+            <img id="menu-button" src="images/hamburger-menu-icon.svg" alt="burger-menu-icon">
           
                 <p style="color: white;" id="mode">Dark Mode</p>
        
