improved the image responsiveness

--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
         </header>
         <h2 id="main-h2">WDD 230: Course Activity Portal</h2>
         <picture id="hero-picture">
-            <source media="(min-width:400px)" srcset="images/oakland_temple.jpeg" style="width: 400px">
-            <source media="(min-width:960px)" srcset="images/oakland_temple.jpeg">
-            <img src="images/oakland_temple.jpeg" alt="picture of the Oakland Temple" class="hero-pic" style="width: 1320px;">
+            <source media="(manx-width:400px)" srcset="images/oakland_temple_small.webp" style="width: 400px">
+            <source media="(max-width:960px)" srcset="images/oakland_temple_medium.webp">
+            <img src="images/oakland_temple.webp" alt="picture of the Oakland Temple" class="hero-pic">
         </picture>
         <main>
 
