--- a/index.html
+++ b/index.html
@@ -406,9 +406,9 @@
         </header>
         <h2 id="main-h2">WDD 230: Course Activity Portal</h2>
         <picture id="hero-picture">
-            <source media="(manx-width:400px)" srcset="images/oakland_temple_small.webp" style="width: 400px">
-            <source media="(max-width:960px)" srcset="images/oakland_temple_medium.webp">
-            <img src="images/oakland_temple.webp" alt="picture of the Oakland Temple" class="hero-pic">
+            <source media="(manx-width:400px)" srcset="images/oakland_temple_small.webp" width="400px" height="200">
+            <source media="(max-width:960px)" srcset="images/oakland_temple_medium.webp" width="1000" height="510">
+            <img src="images/oakland_temple.webp" alt="picture of the Oakland Temple" class="hero-pic" width="1320" height="770">
         </picture>
         <main>
 
