improved the files

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             
             <ul class="menu">
                 <li title="search"><a href="index.html" class="menu-item" id="search">Search</a></li>
-                <li title="plan"><a href="index.html" class="menu-item" id="plan">Site Plan</a></li>
+                <li title="plan"><a href="discover.html" class="menu-item" id="plan">Discover</a></li>
                 <li title="about"><a href="index.html" class="menu-item" id="about">About Us</a></li>
             </ul>
         
