improved the mobile page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -417,18 +417,18 @@
 
             <section id="local-attractions">
                 <h2>Local Attractions</h2>
-                <div id="fish">
+                <div id="fish" class="effect">
                     <img src="images/setubal-fishmarket.webp" alt="Setubal's fish market" loading="lazy" class="attraction-pic">
                     <h3>Setubal's Fish Market</h3>
                 </div>
-                <div id="bowling">
+                <div id="bowling" class="effect">
                     <img src="images/setubal-bowling-large.webp" alt="Bowling Place" loading="lazy" class="attraction-pic">
                     <h3>Bowling Ball</h3>
                 </div>
-                <div id="wine">
+                <div id="wine" class="effect">
                     <img src="images/setubal-wine.webp" alt="wine tasting" loading="lazy" class="attraction-pic">
                     <h3>Day Tour & Wine Tasting                </div>
-                <div id="horse">
+                <div id="horse" class="effect">
                     <img src="images/setubal-horseback.webp" alt="horseback riding" class="attraction-pic">
                     <h3>Horseback Riding</h3>
                 </div>
