fixed an html error

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -2,12 +2,12 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Setubal Chamber</title>
+        <title>Setubal City's Chamber of Commerce</title>
         <meta name="description" content="My name is Ednilson Bambo. This is a page for my WDD230 Assignment. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson">
