--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -407,7 +407,7 @@
        
         <h2 id="main-h2">WDD 230: Course Activity Portal</h2>
         <picture id="hero-picture">
-            <source media="(manx-width:400px)" srcset="images/oakland_temple_small.webp" width="400px" height="200">
+            <source media="(max-width:400px)" srcset="images/oakland_temple_small.webp" width="400px" height="200">
             <source media="(max-width:960px)" srcset="images/oakland_temple_medium.webp" width="1000" height="510">
             <img src="images/oakland_temple.webp" alt="picture of the Oakland Temple" class="hero-pic" width="1320" height="770">
         </picture>
