fixed an html error

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -402,7 +402,7 @@
             <ul class="menu">
                 <li title="search"><a href="index.html" class="menu-item" id="search">Home</a></li>
                 <li title="plan"><a href="discover.html" class="menu-item" id="plan">Discover</a></li>
-                <li title="about"><a href="index.html" class="menu-item" id="about">Directory</a></li>
+                <li title="about"><a href="index.html" class="menu-item" id="directory">Directory</a></li>
                 <li title="about"><a href="index.html" class="menu-item" id="about">Join</a></li>
             </ul>
             <img id="setubal-pic" src="images/setubal-sm.jpg" alt="picture-of-setubal" style="margin-top:-16px;">
