fixed the link to the discover page

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -391,7 +391,7 @@
 
             
             <ul class="menu">
-                <li title="search"><a href="discover.html" class="menu-item" id="search">The wedding dress</a></li>
+                <li title="search"><a href="index.html" class="menu-item" id="search">Home</a></li>
                 <li title="plan"><a href="discover.html" class="menu-item" id="plan">Discover</a></li>
                 <li title="about"><a href="index.html" class="menu-item" id="about">About Us</a></li>
             </ul>
