--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                     <p style="color: black;">Week 01 <a href="holygrail.html">Holy Grail</a></p>
                     <p style="color: black;">Week 02 <a href="https://codepen.io/Ednilson-Bambo/pen/dyjRypg" target="_blank">Responsive</a> | <a href="week02/bom.html" target="_blank">BOM</a></p>
                     <p style="color: black;">Week 03 <a href=""></a> <a href="images/landscape2.2.webp">| Optimized IMG</a> <a href="chamber/discover.html">| Discover</a></p>
-                    <p style="color: black;">Week 04 <a href=""></a></p>
+                    <p style="color: black;">Week 04 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/MWBGKXg">| Pseudo CSS Codepen</a></p>
                     <p style="color: black;">Week 05 <a href=""></a></p>
                     <p style="color: black;">Week 06 <a href=""></a></p>
                     <p style="color: black;">Week 07 <a href=""></a></p>
