updated the main

--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
         </div>
 
         
-            <form>
+            <form title="Sign up form">
                 <div id="form-container">
                 <label for="fname" class="ratevalue">Full Name</label>
                 <input type="text" id="fname" class="ratevalue" name="full-name" required placeholder="Your full name...">
