--- a/chamber/index.html
+++ b/chamber/index.html
@@ -36,7 +36,7 @@
         <nav>
             <img id="menu-button" src="images/hamburger-menu-icon.svg" alt="burger-menu-icon">
             <div id="mode">
-                ☑️
+                <p>Mode</p>
             </div>
             
             
