fixed html errors

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -73,7 +73,8 @@
 
                 <fieldset>
                     <legend>Membership Information</legend>
-                    <label>Membership Level<select type="level" name="level">
+                    <label>Membership Level
+                        <select name="level">
 
                         <option>Select &#9662</option>
                         <option>NP Membership is for non profit organizations and there is no fee.</option>
