tweaked the form in mobile view

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -61,20 +61,20 @@
         
         <main>
             <div id="join-div">
-         <form method="get" action="thankyou.html">
+         <form method="get" action="thankyou.html" id="join-form">
             <fieldset>
-                <legend>My Information</legend>
-                <label>First Name* <input type="text" name="fname" required placeholder="Your first name..."></label>
-                <label>Last Name* <input type="text" name="lname" required placeholder="Your last name..."></label>
-                <label>Business Position Title <input type="text" name="position" placeholder="Your business position..."></label>
-                <label>Email* <input type="email" name="email" required placeholder="your@email.com..."></label>
-                <label>Phone Number* <input type="tel" name="phone" required placeholder="9437398444..."></label>
-                <label>Business Name / Title* <input type="text" name="business" required placeholder="Your business name..."></label>
+                <legend>Personal Information</legend>
+                <label class="top">First Name* <input type="text" name="fname" required placeholder="Your first name..."></label>
+                <label class="top">Last Name* <input type="text" name="lname" required placeholder="Your last name..."></label>
+                <label class="top">Business Position Title <input type="text" name="position" placeholder="Your business position..."></label>
+                <label class="top">Email* <input type="email" name="email" required placeholder="your@email.com..."></label>
+                <label class="top">Phone Number* <input type="tel" name="phone" required placeholder="9437398444..."></label>
+                <label class="top">Business Name / Title* <input type="text" name="business" required placeholder="Your business name..."></label>
             </fieldset>
 
                 <fieldset>
                     <legend>Membership Information</legend>
-                    <label>Membership Level
+                    <label class="top"></label>Membership Level
                         <select name="level">
 
                         <option>Select &#9662;</option>
