finished the weather api activity

--- a/index.html
+++ b/index.html
@@ -427,9 +427,9 @@
                 <li>
                     <p style="color: black;">Week 01 <a href="holygrail.html">Holy Grail</a></p>
                     <p style="color: black;">Week 02 <a href="https://codepen.io/Ednilson-Bambo/pen/dyjRypg" target="_blank">Responsive</a> | <a href="week02/bom.html" target="_blank">BOM</a></p>
-                    <p style="color: black;">Week 03 <a href=""></a> <a href="images/landscape2.2.webp">| Optimized IMG</a> <a href="chamber/discover.html">| Discover</a></p>
-                    <p style="color: black;">Week 04 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/MWBGKXg">| Pseudo CSS Codepen</a> <a href="week04/Images/pseudo-exercises.png" target="_blank">| Pseudo Exercises</a> <a href="week04/tablebuild.html" target="_blank">|  Table Page</a><a href="form-start/form-start/index.html" target="_blank">Form</a></p>
-                    <p style="color: black;">Week 05 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/abjRJMX">Pseudo CSS Elements Codepen</a> <a href="week05/prophets.html">Prophets by Fetch API</a></p>
+                    <p style="color: black;">Week 03 <a href=""></a> <a href="images/landscape2.2.webp" target="_blank">| Optimized IMG</a> <a href="chamber/discover.html">| Discover</a></p>
+                    <p style="color: black;">Week 04 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/MWBGKXg" target="_blank">| Pseudo CSS Codepen</a> <a href="week04/Images/pseudo-exercises.png" target="_blank">| Pseudo Exercises</a> <a href="week04/tablebuild.html" target="_blank">|  Table Page</a><a href="form-start/form-start/index.html" target="_blank">Form</a></p>
+                    <p style="color: black;">Week 05 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/abjRJMX" target="_blank">Pseudo CSS Elements Codepen</a> <a href="week05/prophets.html" target="_blank">| Prophets by Fetch API</a> <a href="week05/weather.html" target="_blank">| Weather API</a></p>
                     <p style="color: black;">Week 06 <a href=""></a></p>
                     <p style="color: black;">Week 07 <a href=""></a></p>
                 </li>
