--- a/index.html
+++ b/index.html
@@ -561,6 +561,7 @@
     <script src="scripts/pattern.js"></script>
     <script src="scripts/table.js"></script>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/links.js"></script>
     
     </body>
 </html>
