updated the json

--- a/index.html
+++ b/index.html
@@ -423,15 +423,14 @@
             
             <section id='learning-activities' class="card">
             <h3>learning-activities</h3>
-            <ul>
-                <li><p>Week 01 <a href="holygrail.html">Holy Grail</a></p></li>
-                <li><p>Week 02 <a href="https://codepen.io/Ednilson-Bambo/pen/dyjRypg" target="_blank">Responsive</a> | <a href="week02/bom.html" target="_blank">BOM</a></p></li>
-                <li><p>Week 03 <a href=""></a> <a href="images/landscape2.2.webp" target="_blank">| Optimized IMG</a> <a href="chamber/discover.html">| Discover</a></p></li>
-                <li><p>Week 04 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/MWBGKXg" target="_blank">| Pseudo CSS Codepen</a> <a href="week04/Images/pseudo-exercises.png" target="_blank">| Pseudo Exercises</a> <a href="week04/tablebuild.html" target="_blank">|  Table Page</a><a href="form-start/form-start/index.html" target="_blank">Form</a></p></li>
-                <li><p>Week 05 <a href=""></a> <a href="https://codepen.io/Ednilson-Bambo/pen/abjRJMX" target="_blank">Pseudo CSS Elements Codepen</a> <a href="week05/prophets.html" target="_blank">| Prophets by Fetch API</a> <a href="week05/weather.html" target="_blank">| Weather API</a></p></li>
+            <ul id="weeks">
+                <!-- <li><p>Week 01 <a href="" class="link-list">Holy Grail</a></p></li>
+                <li><p>Week 02 <a href="" class="link-list">Responsive</a> | <a href="">BOM</a></p></li>
+                <li><p>Week 03 <a href="" class="link-list"></a> <a href="" class="link-list">| Optimized IMG</a> <a href="" class="link-list">| Discover</a></p></li>
+                <li><p>Week 04 <a href="" class="link-list"></a> <a href="" class="link-list">| Pseudo CSS Codepen</a> <a href="" class="link-list">| Pseudo Exercises</a> <a href="" class="link-list">|  Table Page</a><a href="" class="link-list">Form</a></p></li>
+                <li><p>Week 05 <a href="" class="link-list"></a> <a href="" class="link-list">Pseudo CSS Elements Codepen</a> <a href="" class="link-list">| Prophets by Fetch API</a> <a href="" class="link-list">| Weather API</a></p></li>
                 <li><p>Week 06 <a href=""></a></p></li>
-                <li><p>Week 07 <a href=""></a></p></li>
-                
+                <li><p>Week 07 <a href=""></a></p></li> -->
             </ul>
         </section>
 
