improved the table

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -84,7 +84,7 @@
                         <option>Gold Membership</option>
                     
                 </select></label>
-                <label>About your business<textarea name="about"></textarea></label>
+                <label class="top">About your business<textarea name="about"></textarea></label>
                     <label id="hidden-label">Loaded Date: <span id="hidden-date"></span></label>
 
                  
