Corrected a few meta tags

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,19 +3,19 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <![endif]-->
-<html lang="en">
+<html lang="en-US">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Setubal Chamber's Directory Page</title>
-        <meta name="description" content="My name is Ednilson Bambo. This is a page for my WDD230 Assignment. ">
+        <title>Directory Page for Setubal Chamber's Chamber of Commerce</title>
+        <meta name="description" content="This is the directory page for Setubal Chamber's Chamber of Commerce. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Ednilson">
+        <meta name="author" content="Ednilson Bambo">
 
-        <meta property="og:title" content="WDD 230 - Portal - Ednilson Bambo">
+        <meta property="og:title" content="Directory Page for Setubal Chamber's Chamber of Commerce">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dailysabah.com%2Flife%2Ftravel%2Fmagical-secluded-paradise-of-portugals-setubal-peninsula&psig=AOvVaw0sTA1I7m3-EEL3Ro13rCUf&ust=1673632725277000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMCmpPLNwvwCFQAAAAAdAAAAABAE">
-        <meta property="og:url" content="https://yobamba.github.io/wdd230/">
+        <meta property="og:url" content="https://yobamba.github.io/wdd230/chamber/directory.html">
 
         <link rel="stylesheet" href="styles/base.css">
         <link rel="stylesheet" href="styles/larger.css">
