--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,8 +73,9 @@
 
      <section class="chamber-class" id="chamber-weather">
         <h3 id="weather">Weather</h3>
-        <p>40°C</p>
-        <p>Sunny</p>
+        <p>Today's Weather: <span id="weather-span"></span></p>
+        <p><span id="description"></span></p>
+        <img src="" alt="" id="icon">
      </section>
 
      <section class="chamber-class" id="chamber-spotlight">
@@ -104,6 +105,7 @@
     <script src="scripts/getDates.js"></script>
     <script src="scripts/responsive.js"></script>
     <script src="scripts/darkMode.js"></script>
+    <script src="scripts/chamberWeather.js"></script>
     
     </body>
 </html>
