fixed a js error on the getDates file

--- a/JavaScript/joke.html
+++ b/JavaScript/joke.html
@@ -404,7 +404,7 @@
 
         <main>
             <div id="joke-div">
-                <h2 id="joke-h2">New Joke</h2>
+                <h2 id="joke-h2">Your Joke</h2>
                 <h2 id="joke-Btn" style="background-color: lightslategray; width:170px; border-radius: 10px; padding-left: 25px;">Show a Joke</h2>
                 <p id="jokeP"></p>
             </div>   
