fixed some links and  h3 elements

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -73,7 +73,9 @@
 
      <section class="chamber-class" id="chamber-weather">
         <h3 id="weather">Weather</h3>
-        <p>Today's Weather: <span id="weather-span"></span></p>
+        <p id="temp-hoy">Today's Weather: <span id="weather-span"></span></p>
+        <p id="next3">Forcast for the Next 3 Days</p>
+        <p></p>
         <p><span id="description"></span></p>
         <img src="" alt="" id="icon">
      </section>
