--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -8,11 +8,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Directory Page for Setubal Chamber's Chamber of Commerce</title>
-        <meta name="description" content="This is the directory page for Setubal Chamber's Chamber of Commerce. ">
+        <meta name="description" content="This is the directory page for Setubal Chamber's Chamber of Commerce. It displays information from the different companies that are in the chamber. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson Bambo">
 
-        <meta property="og:title" content="Directory Page for Setubal Chamber's Chamber of Commerce">
+        <meta property="og:title" content="This is the directory page for Setubal Chamber's Chamber of Commerce. It displays information from the different companies that are in the chamber. ">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dailysabah.com%2Flife%2Ftravel%2Fmagical-secluded-paradise-of-portugals-setubal-peninsula&psig=AOvVaw0sTA1I7m3-EEL3Ro13rCUf&ust=1673632725277000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMCmpPLNwvwCFQAAAAAdAAAAABAE">
         <meta property="og:url" content="https://yobamba.github.io/wdd230/chamber/directory.html">
@@ -56,8 +56,8 @@
         
         <main>
             <div id="layoutBtns">
-                <button id="gridBtn">⏹️Grid</button>
-                <button id="listBtn">📄List</button>
+                <button id="gridBtn" class="layout">⏹️Grid</button>
+                <button id="listBtn" class="layout">📄List</button>
                </div>
             <div id="responsiveDiv" class="grid"></div>
            
