fixed the weather icons

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -76,7 +76,7 @@
         <p id="temp-hoy">Today's Weather: <span id="weather-span"></span></p>
         <p id="next3">Forcast for the Next 3 Days</p>
         <p></p>
-        <p><span id="description"></span></p>
+        <p id="description-p"><span id="description"></span></p>
         <img src="" alt="" id="icon">
      </section>
 
