fixed an html error on line 80

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -8,11 +8,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Setubal City's Chamber of Commerce</title>
-        <meta name="description" content="My name is Ednilson Bambo. This is a page for my WDD230 Assignment. ">
+        <meta name="description" content="This the home page for Setubal Chamber's of Commerce's website ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson">
 
-        <meta property="og:title" content="WDD 230 - Portal - Ednilson Bambo">
+        <meta property="og:title" content="Home Page - Setubal's Chamber of commerce - Ednilson Bambo">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.dailysabah.com%2Flife%2Ftravel%2Fmagical-secluded-paradise-of-portugals-setubal-peninsula&psig=AOvVaw0sTA1I7m3-EEL3Ro13rCUf&ust=1673632725277000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCMCmpPLNwvwCFQAAAAAdAAAAABAE">
         <meta property="og:url" content="https://yobamba.github.io/wdd230/">
@@ -77,7 +77,7 @@
         <p id="next3">Forcast for the Next 3 Days</p>
         <p></p>
         <p id="description-p"><span id="description"></span></p>
-        <img src="" alt="" id="icon">
+       
      </section>
 
      <section class="chamber-class" id="chamber-spotlight">
