fixed a few links

--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -11,8 +11,8 @@
         <meta name="description" content="My name is Ednilson Bambo. This is a page for my WDD230 Assignment. ">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="author" content="Ednilson">
-        <link rel="stylesheet" href="styles/base.css">
-        <link rel="stylesheet" href="styles/larger.css">
+        <link rel="stylesheet" href="../styles/base.css">
+        <link rel="stylesheet" href="../styles/larger.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com"
         crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" 
@@ -20,13 +20,13 @@
     </head>
     <body>
         <nav>
-            <img src="images/hamburger-menu-icon.svg">
+            <img src="../images/hamburger-menu-icon.svg">
             <a href="https://www.linkedin.com/in/ednilsonbambo/" target="_blank">LinkedIn</a>
             <a href="">BYU-Idaho</a>
         </nav>
 
         <header>
-            <img src="images/profile-pic.png" alt="profile-pic">
+            <img src="../images/profile-pic.jpg" alt="profile-pic">
             <h1 id="my name">Ednilson Bambo</h1>
         </header>
 
