made the site more responsive

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
           
 
-            <img src="images/profile-pic.jpg" alt="profile-pic" id="my-pic" >
+            <img src="images/profile-pic.jpg" alt="profile-pic" class="my-pic" >
             <h1 id="my-name" style="color:black";>Ednilson Bambo</h1>
             
             <ul class="menu">
