--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -26,12 +26,12 @@
         </nav>
 
         <header>
-            <img src="../images/profile-pic.jpg" alt="profile-pic">
+            <img src="../images/profile-pic.jpg" alt="profile-pic" class="my-pic">
             <h1 id="my name">Ednilson Bambo</h1>
         </header>
 
         <main>
-            <div id="main-div">
+            <div class="main-div">
             <h2 id="main-h2">WDD 230: Course Activity Portal</h2>
             <section id='learning-activities' class="card">
             <h3>learning-activities</h3>
@@ -79,6 +79,6 @@
     let text = document.lastModified;
     document.getElementById("lastModified").innerHTML = text;
     </script>
-    <script src="scripts/getDates.js" async defer></script>
+    <script src="../scripts/getDates.js" async defer></script>
     </body>
 </html>
